# serializer version: 1
# name: test_run_db_create__areas[YAMLConfigFile]
  list([
    'gtd',
    'own',
    'tags',
    'thoughts',
  ])
# ---
# name: test_run_db_create__contexts[YAMLConfigFile]
  list([
    'due',
    'dzwk',
    'fat_pig',
    'footnote',
    'pomodoro',
    'puke',
  ])
# ---
# name: test_run_db_create__create_dates[YAMLConfigFile]
  list([
    '2000-01-02',
    '2000-01-03',
    '2024-03-13',
    '2024-03-23',
    '2024-03-30',
    '2024-04-08',
    '2024-05-10',
    '2030-12-31',
  ])
# ---
# name: test_run_db_create__file_count[YAMLConfigFile]
  10
# ---
# name: test_run_db_create__links[YAMLConfigFile]
  list([
    'bar.sh',
    'baz',
    'buz#fuzz',
    'desd_cd_kdzb.yhdxx',
    'eswz_xqow::empiz_ljyiwjbmi_szstj',
    'global:pig_is_gross',
    'local:1',
    'poop',
    'xmind/zorg_e2e_query_arch.xmind',
    'zid:240408#0X',
    'zid:240510#03',
  ])
# ---
# name: test_run_db_create__note_count[YAMLConfigFile]
  151
# ---
# name: test_run_db_create__people[YAMLConfigFile]
  list([
    'clyzajrm',
    'pig',
  ])
# ---
# name: test_run_db_create__projects[YAMLConfigFile]
  list([
    '2_be_or_not_2_be',
    'arms',
    'bad',
    'bazbuz',
    'bmlakcr',
    'bqf',
    'cmeq',
    'cpv_mociy',
    'fgifr',
    'foobar',
    'ipyt',
    'judo',
    'jws_pkaft',
    'laundry',
    'lozmhqjd',
    'okwz',
    'owwnfb',
    'qbsum',
    'rgw_sxtvx',
    'saxy',
    'to_the_bone',
    'uahi',
    'vd_clxi',
    'vennc',
    'vfntwi',
    'wjybwa',
    'xoao',
    'zorg',
    'zv_jzdd_djqa',
  ])
# ---
# name: test_run_db_create__properties[YAMLConfigFile]
  list([
    'a',
    'due',
    'foo',
    'id',
    'key',
    'p',
    'q',
    'recur',
    'type',
    'x',
  ])
# ---
# name: test_run_db_create__table_names[YAMLConfigFile]
  list([
    'area',
    'arealink',
    'context',
    'contextlink',
    'link',
    'linklink',
    'person',
    'personlink',
    'project',
    'projectlink',
    'property',
    'propertylink',
    'zorgfile',
    'zorgfilelink',
    'zorgnote',
  ])
# ---
# name: test_run_db_create__todo_count[YAMLConfigFile]
  17
# ---
# name: test_run_db_create__todo_priorities[YAMLConfigFile]
  list([
    'P0',
    'P1',
    'P2',
    'P3',
  ])
# ---
# name: test_run_db_create__todo_statuses[YAMLConfigFile]
  list([
    'CANCELED_TODO',
    'OPEN_TODO',
  ])
# ---
# name: test_run_db_create__zids[YAMLConfigFile]
  list([
    '000102#00',
    '000103#00',
    '240313#03',
    '240313#04',
    '240313#05',
    '240323#0J',
    '240323#0K',
    '240323#0L',
    '240323#0M',
    '240323#0N',
    '240323#0P',
    '240323#0R',
    '240323#0T',
    '240323#0U',
    '240323#0V',
    '240323#0W',
    '240323#0X',
    '240323#0Y',
    '240323#0Z',
    '240323#0a',
    '240323#0b',
    '240323#0c',
    '240323#0d',
    '240330#02',
    '240408#0X',
    '240408#N2',
    '240510#00',
    '240510#01',
    '240510#02',
    '240510#03',
    '240510#04',
    '240510#05',
    '240510#06',
    '240510#07',
    '240510#08',
    '240510#09',
    '240510#0A',
    '240510#0B',
    '240510#0C',
    '240510#0D',
    '240510#0E',
    '240510#0F',
    '240510#0G',
    '240510#0H',
    '240510#0J',
    '240510#0K',
    '240510#0L',
    '240510#0M',
    '240510#0N',
    '240510#0P',
    '240510#0Q',
    '240510#0R',
    '240510#0b',
    '240510#0c',
    '240510#0f',
    '240510#0h',
    '240510#0k',
    '240510#0m',
    '240510#0n',
    '240510#0u',
    '240510#0v',
    '240510#0w',
    '240510#1B',
    '240510#1E',
    '240510#1F',
    '240510#1G',
    '240510#1H',
    '240510#1J',
    '240510#1P',
    '240510#1R',
    '240510#1T',
    '240510#1U',
    '240510#1V',
    '240510#1W',
    '240510#1X',
    '240510#1Y',
    '240510#1Z',
    '240510#1a',
    '240510#1b',
    '240510#1c',
    '240510#1d',
    '240510#1k',
    '240510#1t',
    '240510#1u',
    '240510#1v',
    '240510#1w',
    '240510#1x',
    '240510#1z',
    '240510#20',
    '240510#21',
    '240510#22',
    '240510#23',
    '240510#24',
    '240510#25',
    '240510#26',
    '240510#27',
    '240510#29',
    '301231#X0',
  ])
# ---
